--- a/Contacts/index.html
+++ b/Contacts/index.html
@@ -1,73 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title>Contacts</title>
-	<base  />
-			<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="" />
-	<meta name="keywords" content="" />
-	<!-- Facebook Open Graph -->
-	<meta name="og:title" content="Contacts" />
-	<meta name="og:description" content="" />
-	<meta name="og:image" content="" />
-	<meta name="og:type" content="article" />
-	<meta name="og:url" content="index.html" />
-	<!-- Facebook Open Graph end -->
-		
-	<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-	<script src="../js/jquery-1.11.3.min.js" type="text/javascript"></script>
-	<script src="../js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="../js/mainc4b2.js" type="text/javascript"></script>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<title>Contacts</title>
+<base  />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="description" content="" />
+<meta name="keywords" content="" />
+<!-- Facebook Open Graph -->
+<meta name="og:title" content="Contacts" />
+<meta name="og:description" content="" />
+<meta name="og:image" content="" />
+<meta name="og:type" content="article" />
+<meta name="og:url" content="index.html" />
+<!-- Facebook Open Graph end -->
 
-	<link href="../css/font-awesome/font-awesome.min3e6e.css" rel="stylesheet" type="text/css" />
-	<link href="../css/siteaf82.css" rel="stylesheet" type="text/css" />
-	<link href="../css/common7aee.css" rel="stylesheet" type="text/css" />
-	<link href="../css/37aee.css" rel="stylesheet" type="text/css" />
-	
-	<script type="text/javascript">var currLang = '';</script>
-		
-	<!--[if lt IE 9]>
+<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<script src="../js/jquery-1.11.3.min.js" type="text/javascript"></script>
+<script src="../js/bootstrap.min.js" type="text/javascript"></script>
+<script src="../js/mainc4b2.js" type="text/javascript"></script>
+<link href="../css/font-awesome/font-awesome.min3e6e.css" rel="stylesheet" type="text/css" />
+<link href="../css/siteaf82.css" rel="stylesheet" type="text/css" />
+<link href="../css/common7aee.css" rel="stylesheet" type="text/css" />
+<link href="../css/37aee.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript">var currLang = '';</script>
+
+<!--[if lt IE 9]>
 	<script src="js/html5shiv.min.js"></script>
 	<![endif]-->
 
-	</head>
+</head>
 
-
-<body><div class="root"><div class="vbox wb_container" id="wb_header">
-	
-<div id="wb_cs_row_115" class="wb-cs-row"><div id="wb_cs_col_116" class="wb-cs-col"><div id="wb_cs_row_117" class="wb-cs-row"><div id="wb_cs_col_118" class="wb-cs-col"><div id="wb_element_instance59" class="wb_element wb_element_picture wb-cs-elem" title=""><img alt="gallery/rebrandit logo (2)" src="../gallery_gen/46452b5c57998be472e581e656561f41_1054x240_-0x-0_1060x240.jpg"></div></div><div class="wb-cs-clear"></div></div><div id="wb_cs_row_119" class="wb-cs-row"><div id="wb_cs_col_120" class="wb-cs-col"><div id="wb_element_instance60" class="wb_element wb-cs-elem" style=" line-height: normal;"><p class="wb-stl-normal">When It's Time to Change Your image </p>
-</div></div><div class="wb-cs-clear"></div></div></div><div id="wb_cs_col_121" class="wb-cs-col wb-cs-right"><div id="wb_element_instance57" class="wb_element wb-menu wb-menu-mobile wb-cs-elem"><a class="btn btn-default btn-collapser"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a><ul class="hmenu"><li><a href="../index.html" target="_self">Home</a></li><li><a href="../About/index.html" target="_self">About</a></li><li class="active"><a href="index.html" target="_self">Contacts</a></li><li><a href="../Our-Work/index.html" target="_self">Our Work</a></li></ul><div class="clearfix"></div></div></div><div class="wb-cs-clear"></div></div><div id="wb_cs_row_122" class="wb-cs-row"><div id="wb_cs_col_123" class="wb-cs-col"><div id="wb_element_instance62" class="wb_element wb-cs-elem" style=" line-height: normal;"><h4 class="wb-stl-pagetitle" style="text-align: center;"><span style="color:rgba(8,8,8,1);">ReBrandit,LLC</span></h4>
-
-<p> </p>
-
-<h3 class="wb-stl-heading3" style="text-align: center;"><strong><span style="color:rgba(240,14,59,1);">"Making You Money Is Our Business"</span></strong></h3>
-
-<p style="text-align: center;"><strong><span style="color:rgba(8,8,8,1);">12811 Kenwood Ln. STE 209,  </span></strong><strong><span style="color:rgba(8,8,8,1);">Ft. Myers, Fl 33907</span></strong></p>
-
-<p style="text-align: center;"><strong><font color="#080808">Phone <span style="color:rgba(8,8,8,1);">239-887-4418  (800)482-3460</span></font></strong></p>
-
-<p style="text-align: center;"><strong><font color="#080808">Fax 239-887-4363</font></strong></p>
-
-<p style="text-align: center;"><font color="#080808"><b>email- mike@rebrand-it.com</b></font></p>
-</div></div><div class="wb-cs-clear"></div></div><div id="wb_cs_row_124" class="wb-cs-row"><div id="wb_cs_col_125" class="wb-cs-col"><div id="wb_element_instance63" class="wb_element wb-cs-elem" style=" line-height: normal;"><h4 class="wb-stl-pagetitle"><span style="color:rgba(31,8,204,1);">Contact</span></h4>
-</div></div><div class="wb-cs-clear"></div></div><div id="wb_cs_row_126" class="wb-cs-row"><div id="wb_cs_col_127" class="wb-cs-col"><div id="wb_element_instance61" class="wb_element wb-cs-elem"><form class="wb_form wb_mob_form" method="post" enctype="multipart/form-data"><input type="hidden" name="wb_form_id" value="a9e12055"><textarea name="message" rows="3" cols="20" class="hpc"></textarea><table><tr><th class="wb-stl-normal">Name&nbsp;&nbsp;</th><td><input type="hidden" name="wb_input_0" value="Name"><input class="form-control form-field" type="text" value="" name="wb_input_0" required="required"></td></tr><tr><th class="wb-stl-normal">E-mail&nbsp;&nbsp;</th><td><input type="hidden" name="wb_input_1" value="E-mail"><input class="form-control form-field" type="text" value="" name="wb_input_1" required="required"></td></tr><tr class="area-row"><th class="wb-stl-normal">Message&nbsp;&nbsp;</th><td><input type="hidden" name="wb_input_2" value="Message"><textarea class="form-control form-field form-area-field" rows="3" cols="20" name="wb_input_2" required="required"></textarea></td></tr><tr class="form-footer"><td colspan="2"><button type="submit" class="btn btn-default">Submit</button></td></tr></table></form><script type="text/javascript">
-						</script></div></div><div class="wb-cs-clear"></div></div><div id="wb_cs_row_128" class="wb-cs-row"><div id="wb_cs_col_129" class="wb-cs-col"><div id="wb_element_instance64" class="wb_element wb-cs-elem" style=" line-height: normal;"><p class="wb-stl-normal">© 2018 <a href="http://rebrand-it.com">rebrand-it.com</a></p>
-</div></div><div class="wb-cs-clear"></div></div></div>
-<div class="vbox wb_container" id="wb_main">
-	
-<div id="wb_element_instance65" class="wb_element" style="width: 100%;">
-						<script type="text/javascript">
+<body>
+<div class="root">
+  <div class="vbox wb_container" id="wb_header">
+    <div id="wb_cs_row_115" class="wb-cs-row">
+      <div id="wb_cs_col_116" class="wb-cs-col">
+        <div id="wb_cs_row_117" class="wb-cs-row">
+          <div id="wb_cs_col_118" class="wb-cs-col">
+            <div id="wb_element_instance59" class="wb_element wb_element_picture wb-cs-elem" title=""><img alt="gallery/rebrandit logo (2)" src="../gallery_gen/46452b5c57998be472e581e656561f41_1054x240_-0x-0_1060x240.jpg"></div>
+          </div>
+          <div class="wb-cs-clear"></div>
+        </div>
+        <div id="wb_cs_row_119" class="wb-cs-row">
+          <div id="wb_cs_col_120" class="wb-cs-col">
+            <div id="wb_element_instance60" class="wb_element wb-cs-elem" style=" line-height: normal;">
+              <p class="wb-stl-normal">When It's Time to Change Your image </p>
+            </div>
+          </div>
+          <div class="wb-cs-clear"></div>
+        </div>
+      </div>
+      <div id="wb_cs_col_121" class="wb-cs-col wb-cs-right">
+        <div id="wb_element_instance57" class="wb_element wb-menu wb-menu-mobile wb-cs-elem"><a class="btn btn-default btn-collapser"></a>
+          <ul class="hmenu">
+            <li><a href="../index.html" target="_self">Home</a></li>
+            <li><a href="../About/index.html" target="_self">About</a></li>
+            <li class="active"><a href="index.html" target="_self">Contacts</a></li>
+            <li><a href="../Our-Work/index.html" target="_self">Our Work</a></li>
+          </ul>
+          <div class="clearfix"></div>
+        </div>
+      </div>
+      <div class="wb-cs-clear"></div>
+    </div>
+    <div id="wb_cs_row_122" class="wb-cs-row">
+      <div id="wb_cs_col_123" class="wb-cs-col">
+        <div id="wb_element_instance62" class="wb_element wb-cs-elem" style=" line-height: normal;">
+          <h4 class="wb-stl-pagetitle" style="text-align: center;"><span style="color:rgba(8,8,8,1);">ReBrandit,LLC</span></h4>
+          <p> </p>
+          <h3 class="wb-stl-heading3" style="text-align: center;"><strong><span style="color:rgba(240,14,59,1);">"Making You Money Is Our Business"</span></strong></h3>
+          <p style="text-align: center;"><strong><span style="color:rgba(8,8,8,1);">12811 Kenwood Ln. STE 209,  </span></strong><strong><span style="color:rgba(8,8,8,1);">Ft. Myers, Fl 33907</span></strong></p>
+          <p style="text-align: center;"><strong><font color="#080808">Phone <span style="color:rgba(8,8,8,1);">239-887-4418  (800)482-3460</span></font></strong></p>
+          <p style="text-align: center;"><strong><font color="#080808">Fax 239-887-4363</font></strong></p>
+          <p style="text-align: center;"><font color="#080808"><b>email- mike@rebrand-it.com</b></font></p>
+        </div>
+      </div>
+      <div class="wb-cs-clear"></div>
+    </div>
+    <div id="wb_cs_row_124" class="wb-cs-row">
+      <div id="wb_cs_col_125" class="wb-cs-col">
+        <div id="wb_element_instance63" class="wb_element wb-cs-elem" style=" line-height: normal;">
+          <h4 class="wb-stl-pagetitle"><span style="color:rgba(31,8,204,1);">Contact</span></h4>
+        </div>
+      </div>
+      <div class="wb-cs-clear"></div>
+    </div>
+    <div id="wb_cs_row_126" class="wb-cs-row">
+      <div id="wb_cs_col_127" class="wb-cs-col">
+        <div id="wb_element_instance61" class="wb_element wb-cs-elem">
+          <form class="wb_form wb_mob_form" method="post" enctype="multipart/form-data">
+            <input type="hidden" name="wb_form_id" value="a9e12055">
+            <textarea name="message" rows="3" cols="20" class="hpc"></textarea>
+            <table>
+              <tr>
+                <th class="wb-stl-normal">Name&nbsp;&nbsp;</th>
+                <td><input type="hidden" name="wb_input_0" value="Name">
+                  <input class="form-control form-field" type="text" value="" name="wb_input_0" required="required"></td>
+              </tr>
+              <tr>
+                <th class="wb-stl-normal">E-mail&nbsp;&nbsp;</th>
+                <td><input type="hidden" name="wb_input_1" value="E-mail">
+                  <input class="form-control form-field" type="text" value="" name="wb_input_1" required="required"></td>
+              </tr>
+              <tr class="area-row">
+                <th class="wb-stl-normal">Message&nbsp;&nbsp;</th>
+                <td><input type="hidden" name="wb_input_2" value="Message">
+                  <textarea class="form-control form-field form-area-field" rows="3" cols="20" name="wb_input_2" required="required"></textarea></td>
+              </tr>
+              <tr class="form-footer">
+                <td colspan="2"><button type="submit" class="btn btn-default">Submit</button></td>
+              </tr>
+            </table>
+          </form>
+          <script type="text/javascript">
+						</script></div>
+      </div>
+      <div class="wb-cs-clear"></div>
+    </div>
+    <div id="wb_cs_row_128" class="wb-cs-row">
+      <div id="wb_cs_col_129" class="wb-cs-col">
+        <div id="wb_element_instance64" class="wb_element wb-cs-elem" style=" line-height: normal;">
+          <p class="wb-stl-normal">© 2018 <a href="http://rebrand-it.com">rebrand-it.com</a></p>
+        </div>
+      </div>
+      <div class="wb-cs-clear"></div>
+    </div>
+  </div>
+  <div class="vbox wb_container" id="wb_main">
+    <div id="wb_element_instance65" class="wb_element" style="width: 100%;"> 
+      <script type="text/javascript">
 				$(function() {
 					$("#wb_element_instance65").hide();
 				});
-			</script>
-						</div></div>
-<div class="vbox wb_container" id="wb_footer" style="height: 175px;">
-	
-<div id="wb_cs_row_130_wrp" class="wb_cont_inner_rel"><div id="wb_cs_row_130" class="wb-cs-row"><div id="wb_cs_col_131" class="wb-cs-col"><div id="wb_element_instance58" class="wb_element wb_element_picture wb-cs-elem" title=""><img alt="gallery/eb6b9f776a4d4ba5802445cd6854d56d.lock" src="../gallery_gen/ffad1189f31c72bb56bf71ba120e4a89_224x90.png"></div></div><div class="wb-cs-clear"></div></div><div class="wb-cs-clear"></div></div><div id="wb_element_instance66" class="wb_element" style="text-align: center; width: 100%;"><div class="wb_footer"></div><script type="text/javascript">
+			</script> 
+    </div>
+  </div>
+  <div class="vbox wb_container" id="wb_footer" style="height: 175px;">
+    <div id="wb_cs_row_130_wrp" class="wb_cont_inner_rel">
+      <div id="wb_cs_row_130" class="wb-cs-row">
+        <div id="wb_cs_col_131" class="wb-cs-col">
+          <div id="wb_element_instance58" class="wb_element wb_element_picture wb-cs-elem" title=""><img alt="gallery/eb6b9f776a4d4ba5802445cd6854d56d.lock" src="../gallery_gen/ffad1189f31c72bb56bf71ba120e4a89_224x90.png"></div>
+        </div>
+        <div class="wb-cs-clear"></div>
+      </div>
+      <div class="wb-cs-clear"></div>
+    </div>
+    <div id="wb_element_instance66" class="wb_element" style="text-align: center; width: 100%;">
+      <div class="wb_footer"></div>
+      <script type="text/javascript">
 			$(function() {
 				var footer = $(".wb_footer");
 				var html = (footer.html() + "").replace(/^\s+|\s+$/g, "");
@@ -77,6 +159,9 @@
 					footer.css({height: ""});
 				}
 			});
-			</script></div></div><div class="wb_sbg"></div></div></body>
-
+			</script></div>
+  </div>
+  <div class="wb_sbg"></div>
+</div>
+</body>
 </html>
