linked logo to home page

--- a/About/index.html
+++ b/About/index.html
@@ -110,7 +110,11 @@
         <div id="wb_cs_col_56" class="wb-cs-col wb-cs-right">
           <div id="wb_cs_row_57" class="wb-cs-row">
             <div id="wb_cs_col_58" class="wb-cs-col">
-              <div id="wb_element_instance21" class="wb_element wb_element_picture wb-cs-elem" title=""><img alt="gallery/rebrandit logo (2)" src="../gallery_gen/46452b5c57998be472e581e656561f41_1054x240_-0x-0_1060x240.jpg"></div>
+              	<div id="wb_element_instance21" class="wb_element wb_element_picture wb-cs-elem" title="">
+				  	<a href="../index.html">
+					<img alt="gallery/rebrandit logo (2)" src="../gallery_gen/46452b5c57998be472e581e656561f41_1054x240_-0x-0_1060x240.jpg">
+					</a>
+				</div>
             </div>
             <div id="wb_cs_col_59" class="wb-cs-col">
               <div id="wb_element_instance18" class="wb_element wb-menu wb-menu-mobile wb-cs-elem"><a class="btn btn-default btn-collapser"></a>
