--- a/Our-Work/index.html
+++ b/Our-Work/index.html
@@ -90,7 +90,10 @@
           </div>
           <div id="wb_cs_row_147" class="wb-cs-row">
             <div id="wb_cs_col_148" class="wb-cs-col">
-              <div id="wb_element_instance69" class="wb_element wb_element_picture wb-cs-elem" title=""><img alt="gallery/rebrandit logo (2)" src="../gallery_gen/46452b5c57998be472e581e656561f41_1054x240_-0x-0_1060x240.jpg"></div>
+              	<div id="wb_element_instance69" class="wb_element wb_element_picture wb-cs-elem" title="">
+					<a href="../index.html"><img alt="gallery/rebrandit logo (2)" src="../gallery_gen/46452b5c57998be472e581e656561f41_1054x240_-0x-0_1060x240.jpg">
+					</a>
+				</div>
             </div>
             <div class="wb-cs-clear"></div>
           </div>
