Remove GM From About

--- a/About/index.html
+++ b/About/index.html
@@ -254,17 +254,18 @@
                 <div class="wb-cs-clear"></div>
               </div>
             </div>
+
             <div id="wb_cs_col_94" class="wb-cs-col">
               <div id="wb_cs_row_95" class="wb-cs-row">
                 <div id="wb_cs_col_96" class="wb-cs-col">
-                  <div id="wb_element_instance23" class="wb_element wb_element_picture wb-cs-elem" title=""><img alt="gallery/scott pic" src="../gallery_gen/3d1011bddda17e5a4c421a87f2cd27a2_520x580_140x-0_800x600.jpg"></div>
+                  <!--<div id="wb_element_instance23" class="wb_element wb_element_picture wb-cs-elem" title=""><img alt="gallery/scott pic" src="../gallery_gen/3d1011bddda17e5a4c421a87f2cd27a2_520x580_140x-0_800x600.jpg"></div>-->
                 </div>
                 <div class="wb-cs-clear"></div>
               </div>
               <div id="wb_cs_row_97" class="wb-cs-row">
                 <div id="wb_cs_col_98" class="wb-cs-col">
                   <div id="wb_element_instance29" class="wb_element wb-cs-elem" style=" line-height: normal;">
-                    <p class="wb-stl-normal">Scott Brown-GM</p>
+                    <!--<p class="wb-stl-normal">Scott Brown-GM</p>-->
                   </div>
                 </div>
                 <div class="wb-cs-clear"></div>
@@ -272,7 +273,7 @@
               <div id="wb_cs_row_99" class="wb-cs-row">
                 <div id="wb_cs_col_100" class="wb-cs-col">
                   <div id="wb_element_instance30" class="wb_element wb-cs-elem" style=" line-height: normal;">
-                    <p>Scott has been successful in building &amp; managing companies and is in charge of all daily operations.</p>
+                    <!--<p>Scott has been successful in building &amp; managing companies and is in charge of all daily operations.</p>-->
                   </div>
                 </div>
                 <div class="wb-cs-clear"></div>
@@ -331,12 +332,12 @@
     </div>
   </div>
   <div class="vbox wb_container" id="wb_main">
-    <div id="wb_element_instance55" class="wb_element" style="width: 100%;"> 
+    <div id="wb_element_instance55" class="wb_element" style="width: 100%;">
       <script type="text/javascript">
 				$(function() {
 					$("#wb_element_instance55").hide();
 				});
-			</script> 
+			</script>
     </div>
   </div>
   <div class="vbox wb_container" id="wb_footer" style="height: 175px;">
