--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,6 @@
 	
 <!-- Favicon
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	
 </head>
 	
 <body>
@@ -44,68 +43,50 @@
 				<a href="index.html" class="navHome">Home</a>
 				<a href="about.html" class="navAbout">About</a> 
 				<a href="contact.html" class="navContact">Contact</a>
-				<a href="work.html" class="navPort">Work</a>
+			  <a href="work.html" class="navPort">Work</a> 			
 			</nav>
 			</div>
 		</div>
 	</header>
 	
-	<div class="row">
-		<div class="container">
-			<div class="three columns">
-				<ul style="text-align: right">
-					<li>I.D Sign Change</li>
-					<li>LED Pricers </li>
-					<li>Fascia Installs</li>
-					<li>Deck Repairs</li>
-					<li>Site Painting</li>
-					<li>Any Repairs</li>
-				</ul>
-			</div>
-			<div class="six columns">
-				<img src="images/h1.jpg" alt="gas station"/>
-			</div>
-			<div class="three columns">
-				<ul>
-					<li>Curb Repair</li>
-					<li>Light Service</li>
-					<li>Canopy Repair</li>
-					<li>Bollard Retrofits</li>
-					<li>Channel Letters</li>
-					<li>Any Modification</li>
-				</ul>
-			</div>
+
+	
+	
+	<div class="container">
+		<div class="row twelve columns" style="padding-top: 2%">
+			<h2 class="footer">ReBrandit, LLC</h2>
+			<p class="footer">
+			<strong style="color: red;">"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, Fl 33907 <br> Phone: 239-887-4418 | (800)482-3460 <br>
+			Fax: 239-887-4363 <br> email: mike@rebrand-it.com</p>				
 		</div>
 	</div>
 	
 	<div class="row">
-		<div class="container">
-			<div class="five columns">
-				<img src="images/h2.jpg" alt="gas station"/>
-			</div>
-			<div class="two columns" style="text-align: center; font-size: 1.5em;">
-				<p>Proud Member</p>
-				<p>of the</p>
-				<p>FPMA</p>
-			</div>
-			<div class="five columns">
-				<img src="images/h3.jpg" alt="gas station"/>
-			</div>
+		<div class="contact">
+			<form>
+				<div class="row">
+					<div class="six columns">
+					  <label for="exampleRecipientInput">Your Name</label>
+					  <input class="u-full-width" type="text" placeholder="Full Name" id="exampleRecipientInput">
+					</div>
+					<div class="six columns">
+					  <label for="exampleEmailInput">Your email</label>
+					  <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
+					</div>				
+				</div>
+				<label for="exampleMessage">Message</label>
+				<textarea class="u-full-width" placeholder="Hello! …" id="exampleMessage"></textarea>
+				<input class="button-primary" type="submit" value="Submit">
+			</form>
 		</div>
 	</div>
 	
 	<footer>
 		<div class="container">
-			<div class="row twelve columns" style="padding-top: 2%">
-				<h2 class="footer">ReBrandit, LLC</h2>
-				<p class="footer">
-				<strong style="color: red;">"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, Fl 33907 <br> Phone: 239-887-4418 | (800)482-3460 <br>
-				Fax: 239-887-4363 <br> email: mike@rebrand-it.com</p>				
-			</div>
-			<div class="row twelve columns">
-				<p class="copyright">&copy; 2018 ReBrandit, LLC All Rights Reserved.</p>
-			</div>
-		</div>	
+		<div class="row twelve columns">
+			<p class="copyright"><br>&copy; 2018 ReBrandit, LLC All Rights Reserved.</p>
+		</div>
+		</div>
 	</footer>	
 	
 <script src="scripts/jquery.magnific-popup.js"></script>
