--- a/work.html
+++ b/work.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-
-<!--------------------------------------------------TEMPLATE-------------------------------------------------->
-
+<!doctype html>
 <html>
-
 <head>
 	<meta charset="utf-8">
 	<title>DJ Portfolio</title>
@@ -32,9 +28,8 @@
 	
 <!-- Favicon
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	
 </head>
-	
+
 <body>
 	<header class="main_nav">		
 		<div class="container">
@@ -50,49 +45,52 @@
 		</div>
 	</header>
 	
+	<div class="container main">
 	<div class="row">
-		<div class="container">
-			<div class="three columns">
-				<ul style="text-align: right">
-					<li>I.D Sign Change</li>
-					<li>LED Pricers </li>
-					<li>Fascia Installs</li>
-					<li>Deck Repairs</li>
-					<li>Site Painting</li>
-					<li>Any Repairs</li>
-				</ul>
-			</div>
-			<div class="six columns">
-				<img src="images/h1.jpg" alt="gas station"/>
-			</div>
-			<div class="three columns">
-				<ul>
-					<li>Curb Repair</li>
-					<li>Light Service</li>
-					<li>Canopy Repair</li>
-					<li>Bollard Retrofits</li>
-					<li>Channel Letters</li>
-					<li>Any Modification</li>
-				</ul>
-			</div>
+		
+		<div class="six columns portfolio">
+			<img src="images/w1.jpg"/>
+			<p>Before</p>
+		</div>
+		<div class="six columns portfolio">
+			<img src="images/w2.jpg"/>
+			<p>
+			After
+			</p>
 		</div>
 	</div>
 	
 	<div class="row">
-		<div class="container">
-			<div class="five columns">
-				<img src="images/h2.jpg" alt="gas station"/>
-			</div>
-			<div class="two columns" style="text-align: center; font-size: 1.5em;">
-				<p>Proud Member</p>
-				<p>of the</p>
-				<p>FPMA</p>
-			</div>
-			<div class="five columns">
-				<img src="images/h3.jpg" alt="gas station"/>
-			</div>
+		<div class="six columns portfolio">
+			<img src="images/w3.jpg"/>
+			<p>
+			Before
+			</p>
+		</div>
+		<div class="six columns portfolio">
+			<img src="images/w4.jpg"/>
+			<p>
+			After
+			</p>
+		</div>		
+	</div>
+
+	<div class="row">
+		<div class="six columns portfolio">
+			<img src="images/w5.jpg"/>
+		</div>
+		<div class="six columns portfolio">
+			<img src="images/w6.jpg"/>
 		</div>
 	</div>
+		
+	<div class="row">
+		<div class="four columns portfolio">
+			<img src="images/w7.jpg"/>
+		</div>
+	</div> 
+		
+	</div><!-- Container-->
 	
 	<footer>
 		<div class="container">
@@ -108,31 +106,5 @@
 		</div>	
 	</footer>	
 	
-<script src="scripts/jquery.magnific-popup.js"></script>
-<script type="text/javascript">
-	$('.image-link').magnificPopup({
-  type: 'image',
-  mainClass: 'mfp-with-zoom', // this class is for CSS animation below
-
-  zoom: {
-    enabled: true, // By default it's false, so don't forget to enable it
-
-    duration: 300, // duration of the effect, in milliseconds
-    easing: 'ease-in-out', // CSS transition easing function
-
-    // The "opener" function should return the element from which popup will be zoomed in
-    // and to which popup will be scaled down
-    // By defailt it looks for an image tag:
-    opener: function(openerElement) {
-      // openerElement is the element on which popup was initialized, in this case its <a> tag
-      // you don't need to add "opener" option if this code matches your needs, it's defailt one.
-      return openerElement.is('img') ? openerElement : openerElement.find('img');
-    }
-  }
-
-});
-</script>	
-	
 </body>
-	
 </html>
