--- a/Our-Work/index.html
+++ b/Our-Work/index.html
@@ -21,6 +21,7 @@
 <script src="../js/bootstrap.min.js" type="text/javascript"></script>
 <script src="../js/mainc4b2.js" type="text/javascript"></script>
 <link href="../css/font-awesome/font-awesome.min3e6e.css" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
 <link href="../css/siteaf82.css" rel="stylesheet" type="text/css" />
 <link href="../css/common7aee.css" rel="stylesheet" type="text/css" />
 <link href="../css/47aee.css" rel="stylesheet" type="text/css" />
@@ -97,7 +98,7 @@
           <div id="wb_cs_row_149" class="wb-cs-row">
             <div id="wb_cs_col_150" class="wb-cs-col">
               <div id="wb_element_instance70" class="wb_element wb-cs-elem" style=" line-height: normal;">
-                <p class="wb-stl-normal" style="text-align: center;">When It's Time to Change Your image </p>
+                <p class="wb-stl-normal" style="text-align: center;">WHEN IT'S TIME TO CHANGE YOUR IMAGE</p>
               </div>
             </div>
             <div class="wb-cs-clear"></div>
@@ -173,12 +174,12 @@
     </div>
   </div>
   <div class="vbox wb_container" id="wb_main">
-    <div id="wb_element_instance84" class="wb_element" style="width: 100%;"> 
+    <div id="wb_element_instance84" class="wb_element" style="width: 100%;">
       <script type="text/javascript">
 				$(function() {
 					$("#wb_element_instance84").hide();
 				});
-			</script> 
+			</script>
     </div>
   </div>
   <div class="vbox wb_container" id="wb_footer" style="height: 175px;">
