--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>Home</title>
+<title>Rebrand-it</title>
 <base  />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="" />
@@ -21,6 +21,7 @@
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
 <script src="js/mainc4b2.js" type="text/javascript"></script>
 <link href="css/font-awesome/font-awesome.min3e6e.css" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
 <link href="css/siteaf82.css" rel="stylesheet" type="text/css" />
 <link href="css/common7aee.css" rel="stylesheet" type="text/css" />
 <link href="css/17aee.css" rel="stylesheet" type="text/css" />
@@ -37,51 +38,45 @@
   <div class="vbox wb_container" id="wb_header">
     <div id="wb_cs_row_1_wrp" class="wb_cont_inner_rel">
       <div id="wb_cs_row_1" class="wb-cs-row">
+      <!--Start of Navigation-->
+        <div id="wb_cs_row_4" class="wb-cs-row">
+          <div id="wb_cs_col_5" class="wb-cs-col">
+            <div id="wb_element_instance0" class="wb_element wb-menu wb-menu-mobile wb-cs-elem"><a class="btn btn-default btn-collapser"></a>
+              <ul class="hmenu">
+                <li class="active"><a href="index.html" target="_self">Home</a></li>
+                <li><a href="About/index.html" target="_self">About</a></li>
+                <li><a href="Contacts/index.html" target="_self">Contacts</a></li>
+                <li><a href="Our-Work/index.html" target="_self">Our Work</a></li>
+              </ul>
+              <div class="clearfix"></div>
+            </div>
+          </div>
+          <div class="wb-cs-clear"></div>
+        </div>
+      <!--end of navigation-->
+
+      <!--Start of left List-->
         <div id="wb_cs_col_2" class="wb-cs-col">
-          <div id="wb_element_instance6" class="wb_element wb-cs-elem" style=" line-height: normal;">
-            <h2 class="wb-stl-heading2"> </h2>
-            <ul>
+          <div id="wb_element_instance6" class="wb_element wb-cs-elem" style="line-height: normal; float:left;">
+            <ul style="list-style-type: none;">
               <li class="wb-stl-normal" style="text-align: left;">I.D. Sign Change</li>
-            </ul>
-            <p class="wb-stl-normal" style="text-align: left;"> </p>
-            <ul>
-              <li class="wb-stl-normal" style="text-align: left;">
-                <p>LED Pricers </p>
-              </li>
-            </ul>
-            <p class="wb-stl-normal" style="text-align: left;"> </p>
-            <ul>
+                <p class="wb-stl-normal" style="text-align: left;"> </p>
+              <li class="wb-stl-normal" style="text-align: left;">LED Pricers</li>
+                <p class="wb-stlnormal" style="text-align: left;"> </p>
               <li class="wb-stl-normal" style="text-align: left;">Fascia Installs</li>
-            </ul>
-            <p class="wb-stl-normal" style="text-align: left;"> </p>
-            <ul>
+                <p class="wb-stl-normal" style="text-align: left;"> </p>
               <li class="wb-stl-normal" style="text-align: left;">Deck Repairs</li>
-            </ul>
-            <p class="wb-stl-normal" style="text-align: left;"> </p>
-            <ul>
+                <p class="wb-stl-normal" style="text-align: left;"> </p>
               <li class="wb-stl-normal" style="text-align: left;">Site Painting</li>
-            </ul>
-            <p class="wb-stl-normal" style="text-align: left;"> </p>
-            <ul>
+                <p class="wb-stl-normal" style="text-align: left;"> </p>
               <li class="wb-stl-normal" style="text-align: left;">Any Repairs</li>
             </ul>
           </div>
         </div>
+      <!--end of left side list-->
+
+    <!--Start of Right List-->
         <div id="wb_cs_col_3" class="wb-cs-col wb-cs-right">
-          <div id="wb_cs_row_4" class="wb-cs-row">
-            <div id="wb_cs_col_5" class="wb-cs-col">
-              <div id="wb_element_instance0" class="wb_element wb-menu wb-menu-mobile wb-cs-elem"><a class="btn btn-default btn-collapser"></a>
-                <ul class="hmenu">
-                  <li class="active"><a href="index.html" target="_self">Home</a></li>
-                  <li><a href="About/index.html" target="_self">About</a></li>
-                  <li><a href="Contacts/index.html" target="_self">Contacts</a></li>
-                  <li><a href="Our-Work/index.html" target="_self">Our Work</a></li>
-                </ul>
-                <div class="clearfix"></div>
-              </div>
-            </div>
-            <div class="wb-cs-clear"></div>
-          </div>
           <div id="wb_cs_row_6" class="wb-cs-row">
             <div id="wb_cs_col_7" class="wb-cs-col">
               <div id="wb_element_instance2" class="wb_element wb_element_picture wb-cs-elem" title=""><img alt="gallery/rebrandit logo (2)" src="gallery_gen/46452b5c57998be472e581e656561f41_1054x240_-0x-0_1060x240.jpg"></div>
@@ -90,8 +85,8 @@
           </div>
           <div id="wb_cs_row_8" class="wb-cs-row">
             <div id="wb_cs_col_9" class="wb-cs-col">
-              <div id="wb_element_instance5" class="wb_element wb-cs-elem" style=" line-height: normal;">
-                <p class="wb-stl-normal" style="text-align: center;">When It's Time to Change Your image </p>
+              <div id="wb_element_instance5" class="wb_element wb-cs-elem" style="line-height: normal;">
+                <p class="wb-stl-normal" style="text-align: center;">WHEN IT'S TIME TO CHANGE YOUR IMAGE </p>
               </div>
             </div>
             <div class="wb-cs-clear"></div>
@@ -102,30 +97,17 @@
             </div>
             <div id="wb_cs_col_12" class="wb-cs-col">
               <div id="wb_element_instance4" class="wb_element wb-cs-elem" style=" line-height: normal;">
-                <h2 class="wb-stl-heading2"> </h2>
-                <ul>
+                <ul style= "list-style-type:none;">
                   <li class="wb-stl-normal" style="text-align: left;">Curb Repair</li>
-                </ul>
-                <p class="wb-stl-normal" style="text-align: left;"> </p>
-                <ul>
-                  <li class="wb-stl-normal" style="text-align: left;">
-                    <p>Light Service</p>
-                  </li>
-                </ul>
-                <p class="wb-stl-normal" style="text-align: left;"> </p>
-                <ul>
+                    <p class="wb-stl-normal" style="text-align: left;"> </p>
+                  <li class="wb-stl-normal" style="text-align: left;">Light Service</li>
+                    <p class="wb-stl-normal" style="text-align: left;"> </p>
                   <li class="wb-stl-normal" style="text-align: left;">Canopy Repair</li>
-                </ul>
-                <p class="wb-stl-normal" style="text-align: left;"> </p>
-                <ul>
+                    <p class="wb-stl-normal" style="text-align: left;"> </p>
                   <li class="wb-stl-normal" style="text-align: left;">Bollard Retrofits</li>
-                </ul>
-                <p class="wb-stl-normal" style="text-align: left;"> </p>
-                <ul>
+                    <p class="wb-stl-normal" style="text-align: left;"> </p>
                   <li class="wb-stl-normal" style="text-align: left;">Channel Letters</li>
-                </ul>
-                <p class="wb-stl-normal" style="text-align: left;"> </p>
-                <ul>
+                    <p class="wb-stl-normal" style="text-align: left;"> </p>
                   <li class="wb-stl-normal" style="text-align: left;">Any Modification</li>
                 </ul>
               </div>
@@ -133,6 +115,8 @@
             <div class="wb-cs-clear"></div>
           </div>
         </div>
+    <!--End of Right List-->
+
         <div class="wb-cs-clear"></div>
       </div>
       <div class="wb-cs-clear"></div>
@@ -148,9 +132,9 @@
             </div>
             <div id="wb_cs_col_19" class="wb-cs-col">
               <div id="wb_element_instance10" class="wb_element wb-cs-elem" style=" line-height: normal;">
-                <p class="wb-stl-custom3" style="text-align: center;"><span class="wb-stl-special"><span style="color:rgba(34,19,240,1);">Proud Member </span></span></p>
-                <p class="wb-stl-custom3" style="text-align: center;"><span class="wb-stl-special"><span style="color:rgba(34,19,240,1);">of the </span></span></p>
-                <p class="wb-stl-custom3" style="text-align: center;"><span class="wb-stl-special"><span style="color:rgba(34,19,240,1);">FPMA </span></span></p>
+                <p class="wb-stl-custom3" style="text-align: center;"><span class="wb-stl-special"><span style="color:#022a9c;">Proud Member </span></span></p>
+                <p class="wb-stl-custom3" style="text-align: center;"><span class="wb-stl-special"><span style="color:#022a9c;">of the </span></span></p>
+                <p class="wb-stl-custom3" style="text-align: center;"><span class="wb-stl-special"><span style="color:#022a9c;">FPMA </span></span></p>
               </div>
             </div>
             <div class="wb-cs-clear"></div>
@@ -222,20 +206,19 @@
       </div>
       <div class="wb-cs-clear"></div>
     </div>
-    <div id="wb_element_instance16" class="wb_element" style="width: 100%;"> 
+    <div id="wb_element_instance16" class="wb_element" style="width: 100%;">
       <script type="text/javascript">
 				$(function() {
 					$("#wb_element_instance16").hide();
 				});
-			</script> 
+			</script>
     </div>
   </div>
   <div class="vbox wb_container" id="wb_footer" style="height: 175px;">
     <div id="wb_cs_row_13_wrp" class="wb_cont_inner_rel">
       <div id="wb_cs_row_13" class="wb-cs-row">
         <div id="wb_cs_col_14" class="wb-cs-col">
-          <div id="wb_element_instance1" class="wb_element wb_element_picture wb-cs-elem" title=""><img alt="gallery/eb6b9f776a4d4ba5802445cd6854d56d.lock" src="gallery_gen/ffad1189f31c72bb56bf71ba120e4a89_224x90.png"></div>
-        </div>
+
         <div class="wb-cs-clear"></div>
       </div>
       <div class="wb-cs-clear"></div>
