--- a/Contacts/index.html
+++ b/Contacts/index.html
@@ -21,6 +21,7 @@
 <script src="../js/bootstrap.min.js" type="text/javascript"></script>
 <script src="../js/mainc4b2.js" type="text/javascript"></script>
 <link href="../css/font-awesome/font-awesome.min3e6e.css" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
 <link href="../css/siteaf82.css" rel="stylesheet" type="text/css" />
 <link href="../css/common7aee.css" rel="stylesheet" type="text/css" />
 <link href="../css/37aee.css" rel="stylesheet" type="text/css" />
@@ -46,7 +47,7 @@
         <div id="wb_cs_row_119" class="wb-cs-row">
           <div id="wb_cs_col_120" class="wb-cs-col">
             <div id="wb_element_instance60" class="wb_element wb-cs-elem" style=" line-height: normal;">
-              <p class="wb-stl-normal">When It's Time to Change Your image </p>
+              <p class="wb-stl-normal">WHEN IT'S TIME TO CHANGE YOUR IMAGE </p>
             </div>
           </div>
           <div class="wb-cs-clear"></div>
@@ -129,12 +130,12 @@
     </div>
   </div>
   <div class="vbox wb_container" id="wb_main">
-    <div id="wb_element_instance65" class="wb_element" style="width: 100%;"> 
+    <div id="wb_element_instance65" class="wb_element" style="width: 100%;">
       <script type="text/javascript">
 				$(function() {
 					$("#wb_element_instance65").hide();
 				});
-			</script> 
+			</script>
     </div>
   </div>
   <div class="vbox wb_container" id="wb_footer" style="height: 175px;">
