Latest  minor tweaks

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<div class="row">
 		<div class="container">
 			<div class="two columns">
-				<ul>
+				<ul style="list-style-type: none">
 					<li>I.D Sign Change</li>
 					<li>LED Pricers </li>
 					<li>Fascia Installs</li>
@@ -65,7 +65,7 @@
 				<img src="images/h1.jpg" alt="gas station"/>
 			</div>
 			<div class="two columns">
-				<ul>
+				<ul style="list-style-type: none">
 					<li>Curb Repair</li>
 					<li>Light Service</li>
 					<li>Canopy Repair</li>
